Fix font management
Import a customized remark.min.js where the font-size has been changed.
Only the .html class defines a 20px font size. The code is marked as
"smaller". Everything else has been deleted (in terms of font size).

This allows much more flexibility for tweaking the font size from here.
For example, applying "classes" to entire slides now works, eg:

class: small

or to a specific block:

.class[
```C
int main(void)
{
        return 0;
}
```
]

Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/template.html
+++ b/template.html
@@ -15,7 +15,8 @@
         <textarea id="source">
 [% PROCESS content %]
         </textarea>
-        <script src="[% common %]/remark-latest.min.js"></script>
+        <!-- <script src="[% common %]/remark-latest.min.js"></script> -->
+        <script src="[% common %]/remark-git.min.js"></script>
         <script src="[% common %]/hljs.gdb.js"></script>
         <script src="[% common %]/hljs.makefile.js"></script>
         <script src="[% common %]/hljs.terminal.js"></script>
