Switch to using the new filename macro instead of css class
Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/template.html
+++ b/template.html
@@ -20,6 +20,7 @@
         <script src="[% common %]/hljs.gdb.js"></script>
         <script src="[% common %]/hljs.makefile.js"></script>
         <script src="[% common %]/hljs.terminal.js"></script>
+        <script src="[% common %]/remark.filename.js"></script>
         <script src="[% common %]/remark.newline.js"></script>
         <script src="[% common %]/remark.scale.js"></script>
         <script>
