Add incremental slide option to HTML template
Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/template.html
+++ b/template.html
@@ -31,6 +31,8 @@
                 highlightSpans: true,
                 /* Mark lines marked with an asterix */
                 highlightLines: true,
+                /* Configure incremental slides */
+                disableIncrementalSlides: [% incslides %],
             });
         </script>
     </body>
