template.html: disable counting incremental slides
Signed-off-by: Joel Porquet <joel@porquet.org>

--- a/template.html
+++ b/template.html
@@ -33,6 +33,8 @@
                 highlightLines: true,
                 /* Configure incremental slides */
                 disableIncrementalSlides: [% incslides %],
+                /* Disable counting incremental slides */
+                countIncrementalSlides: false,
             });
         </script>
     </body>
