--- a/template.html
+++ b/template.html
@@ -17,12 +17,8 @@
         </textarea>
         <!-- <script src="[% common %]/remark-latest.min.js"></script> -->
         <script src="[% common %]/remark-git.min.js"></script>
-        <script src="[% common %]/hljs.gdb.js"></script>
-        <script src="[% common %]/hljs.makefile.js"></script>
-        <script src="[% common %]/hljs.terminal.js"></script>
-        <script src="[% common %]/remark.filename.js"></script>
-        <script src="[% common %]/remark.newline.js"></script>
-        <script src="[% common %]/remark.scale.js"></script>
+        <script src="[% common %]/hljs.custom.js"></script>
+        <script src="[% common %]/remark.custom.js"></script>
         <script src="[% common %]/katex.min.js"></script>
         <script src="[% common %]/auto-render.min.js"></script>
         <link rel="stylesheet" href="[% common %]/katex.min.css">
