--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="[% common %]/css/base.css">
+        <link rel="stylesheet" href="[% common %]/style/base.css">
         <link rel="stylesheet" href="[% common %]/vendor/katex/katex.min.css">
         [% TRY %]
             [% USE File("local.css") %]
